# csword

./: .gitignore  CMakeLists.txt  ctl  readme.md
src/: CMakeLists.txt
src/exe/: main.c
src/inc/csword/: cmd.h  error.h  fgwalk.h  fs.h  fswalk.h  limit.h  res.h  type.h  version.h
src/lib/: cmd-create.c  cmd-help.c  cmd-version.c  exit-error.c  exit-uerror.c  fclone.c  fcopy.c  fgwalk.c  fswalk.c  isdir.c  isfile.c  make-dir.c  mk-cspec.c  msg-error.c  pjoin.c  read-con.c  res.c  strver.c
src/res/exe-tmp/src/: CMakeLists.txt
src/res/exe-tmp/src/exe/: main.c
src/res/exe-tmp/src/inc/shield/: cmd.h
src/res/exe-tmp/src/lib/: cmd-help.c
src/res/pkg-tmp/: CMakeLists.txt  readme.md
src/res/ske-tmp/: readme.md
